packages/shared-skills/skills/programming/fixtures/java/no-excuse/fail/optional-get/OptionalLocalCase.java
package sample.bad;

import java.util.Optional;

class OptionalLocalCase {
    String name(Optional<String> input) {
        Optional<String> value = input;
        return value.get();
    }
}
